testing/tests/ui/terminator-operator.stderr
error: a closing delimiter must not start with an operator: ">>"
        --> testing/issue-128.toml
 --> tests/ui/terminator-operator.rs:4:49
  |
4 | #[template(source = "<<a>> and <<b>>", config = "issue-128.toml", syntax = "mwe", ext="")]
  |                                                 ^^^^^^^^^^^^^^^^

error: a closing delimiter must not start an with operator: ">>>" starts with ">>"
        --> testing/issue-128-2.toml
  --> tests/ui/terminator-operator.rs:11:49
   |
11 | #[template(source = "<<a>> and <<b>>", config = "issue-128-2.toml", syntax = "mwe", ext="")]
   |                                                 ^^^^^^^^^^^^^^^^^^
